thanks page done
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@5186 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -12,6 +12,19 @@
 	url = "http://cdsweb.cern.ch/record/989631/files/brochure-2006-003-eng.pdf",
 	year = "2006"
 }
+	  pages		   = "544 -- 548"
+	  conference	= "Topical Workshop on Electronics for Particle Physics"
+	  address		= "Naxos, Greece"
+
+@Proceedings{white10,
+      author         = "WHITE, S. and ALEMANY-FERNANDEZ, R. and BURKHARDT, H. and LAMONT, M.",
+      title          = "First Luminosity Scans in the LHC",
+	  conference	= "1st International Particle Accelerator Conference: IPAC'10"
+	  address		= "Kyoto, Japan"
+      pages          = "486--488",
+      year           = "2010",
+	  url			= "http://accelconf.web.cern.ch/AccelConf/IPAC10/papers/mopec014.pdf"
+}
 
 #--------------------------------------------- TOTEM ------------------------------------------------
 
@@ -91,11 +104,15 @@
 }
 
 @Article{totem11-2,
-      author       = "ANTCHEV, G.",
-      title        = "First measurements of the total proton-proton cross section
-                      at the LHC energy of √s =7TeV. oai:cds.cern.ch:1383030",
-      month        = "Sep",
-      year         = "2011",
+      collaboration  = "TOTEM",
+	author = "ANTCHEV, G. et al.",
+  title="First measurement of the total proton-proton cross-section at the LHC energy of $\sqrt s = 7\, TeV$",
+  journal="EPL",
+  volume="96",
+  number="2",
+  pages="21002",
+  url="http://stacks.iop.org/0295-5075/96/i=2/a=21002",
+  year="2011"
 }
 
 @Thesis{hubert,
@@ -1440,7 +1457,7 @@
 
 @Url{millepede,
 	author = "BLOBEL, V."
-	title = "Millepede II: The Manual ",
+	title = "Millepede II: The Manual",
 	url = "http://www.desy.de/$^\sim$blobel/Mptwo.pdf"
 	year = "2007"
 }
